<resources>
    <string name="app_name">Safari Restaurant</string>
    <string name="entree">Entrées</string>
    <string name="plats">Plats</string>
    <string name="dessert">Dessert</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="qt">1</string>
    <string name="cmd">Commander</string>
    <string name="titleCart">Résumé de votre commande:</string>
    <string name="cart">cart</string>
    <string name="iconcart">IconCart</string>
    <string name="nb">nb</string>
    <string name="fileName">qtCart</string>
    <string name="submit">submit</string>
    <string name="username">Username</string>
    <string name="name">name</string>
    <string name="lastname">lastname</string>
    <string name="street">street</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="already_safary">already safary</string>
    <string name="log_in">Log in</string>
</resources>
