<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity"
    android:background="@drawable/backsafari"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="30dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_foodImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/safari" />

                <Button
                    android:id="@+id/entree"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/entree"
                    android:textSize="22sp"
                    android:background="@color/colorOrange"
                    android:textColor="#ffffff"
                    android:layout_marginTop="100dp"
                    android:onClick="btnMenu"
                    />
                <Button
                    android:id="@+id/plat"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/plats"
                    android:textSize="22sp"
                    android:background="@color/colorOrange"
                    android:textColor="#ffffff"
                    android:layout_marginTop="10dp"
                    android:onClick="btnMenu"
                    />
                <Button
                    android:id="@+id/dessert"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/dessert"
                    android:textSize="22sp"
                    android:background="@color/colorOrange"
                    android:textColor="#ffffff"
                    android:layout_marginTop="10dp"
                    android:onClick="btnMenu"
                    />


        </LinearLayout>

</ScrollView>