<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/ivImage2"
        android:scaleType="centerCrop"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="Recipe Name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/txtRecipeName"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="Description"
        android:textSize="22sp"
        android:id="@+id/txtDescription"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="Price"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="27sp"
        android:textStyle="bold|italic"
        android:gravity="end"
        android:id="@+id/txtPrice"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp">
            <Button
                android:id="@+id/btnMinus"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/minus"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:layout_alignParentBottom="true"
                android:layout_margin="20dp"
                android:onClick="quantityDown"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qt"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/quantityText">

            </TextView>
            <Button
                android:id="@+id/btnUp"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/plus"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="20dp"
                android:onClick="quantityUp"
                />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cmd"
            android:id="@+id/cmd"
            android:onClick="btnOrder">

        </Button>



    </LinearLayout>

</ScrollView>
